Update 'sqvaygys3-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe:5471c14f96f93ebecf386e79ae8409b4a084ca8c@sha256:6d2df9ec78f51de649022d2ccf72403693e16b80fdd686ecc434325961dfa007

--- a/components/sqvaygys3-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/sqvaygys3-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: sqvaygys3-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:5471c14f96f93ebecf386e79ae8409b4a084ca8c@sha256:6d2df9ec78f51de649022d2ccf72403693e16b80fdd686ecc434325961dfa007
+          name: container-image
